--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        const { useState, useEffect, useRef } = React;
+        const { useState, useEffect, useRef, useCallback } = React;
 
         // 🛑 您的 Google Script 網址
         const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxfOb6lYOtQnvnQ0GXSfnIMtHF2sDi6hcuthiKX0QP4I5RsI93BgcV9QS_p0Bw1icf1BQ/exec";
@@ -83,7 +83,8 @@
           Alert: (p) => <IconWrapper {...p}><circle cx="12" cy="12" r="10"/><line x1="12" x2="12" y1="8" y2="12"/><line x1="12" x2="12.01" y1="16" y2="16"/></IconWrapper>,
           ChevronDown: (p) => <IconWrapper {...p}><path d="m6 9 6 6 6-6"/></IconWrapper>,
           Search: (p) => <IconWrapper {...p}><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></IconWrapper>,
-          Save: (p) => <IconWrapper {...p}><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></IconWrapper>
+          Save: (p) => <IconWrapper {...p}><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></IconWrapper>,
+          Refresh: (p) => <IconWrapper {...p}><path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"/><path d="M16 21h5v-5"/></IconWrapper>
         };
 
         // --- Components ---
@@ -164,12 +165,15 @@
           </div>
         );
 
-        const SectionHeader = ({ icon: Icon, title }) => (
-          <div className="flex items-center gap-2 mb-5 mt-2 px-1">
-            <div className="p-2.5 bg-orange-100 rounded-xl text-[#c25e00]">
-              <Icon size={20} />
+        const SectionHeader = ({ icon: Icon, title, rightContent }) => (
+          <div className="flex items-center justify-between mb-5 mt-2 px-1">
+            <div className="flex items-center gap-2">
+                <div className="p-2.5 bg-orange-100 rounded-xl text-[#c25e00]">
+                <Icon size={20} />
+                </div>
+                <h3 className="font-black text-gray-800 text-base md:text-lg tracking-widest">{title}</h3>
             </div>
-            <h3 className="font-black text-gray-800 text-base md:text-lg tracking-widest">{title}</h3>
+            {rightContent}
           </div>
         );
 
@@ -257,7 +261,7 @@
           const [isProductLoading, setIsProductLoading] = useState(true);
           const [modalData, setModalData] = useState(null);
 
-          const [rememberMe, setRememberMe] = useState(true); // 🌟 新增：記住我狀態
+          const [rememberMe, setRememberMe] = useState(true); 
 
           const [items, setItems] = useState([{ id: 1, name: '', qty: '', unit: '片', note: '' }]); 
           const [loading, setLoading] = useState(false);
@@ -280,27 +284,39 @@
             orderPhone: '',
           });
 
-          // 🌟 1. 載入時：讀取 localStorage 資料
-          useEffect(() => {
-            if (window.tailwind) setStyleLoaded(true);
-            else setTimeout(() => setStyleLoaded(true), 500);
-
-            // 載入產品
-            fetch(`${GOOGLE_SCRIPT_URL}?action=getProducts`)
+          // 📦 封裝讀取產品的函式，方便手動呼叫
+          const fetchProducts = useCallback((showToast = false) => {
+            setIsProductLoading(true);
+            // 🌟 加上時間戳記 _t 防止瀏覽器快取，確保抓到最新資料
+            fetch(`${GOOGLE_SCRIPT_URL}?action=getProducts&_t=${new Date().getTime()}`)
               .then(res => res.json())
               .then(data => {
                 if(Array.isArray(data)){
                     if(data.length === 0) setModalData({ msg: "⚠️ 連線成功但找不到產品資料。", type: 'error' });
                     setProductList(data);
+                    if(showToast) {
+                        // 簡單提示
+                        alert("✅ 產品資料已更新！");
+                    }
                 }
                 setIsProductLoading(false);
               })
               .catch(err => {
                 console.error("Error:", err);
                 setIsProductLoading(false);
+                if(showToast) alert("❌ 更新失敗，請檢查網路");
               });
+          }, []);
 
-            // 📦 讀取使用者儲存的資料
+          // 🌟 1. 載入時：讀取 localStorage 資料 & 產品資料
+          useEffect(() => {
+            if (window.tailwind) setStyleLoaded(true);
+            else setTimeout(() => setStyleLoaded(true), 500);
+
+            // 載入產品 (初次)
+            fetchProducts(false);
+
+            // 讀取使用者儲存的資料
             try {
                 const savedData = localStorage.getItem('tilePark_userData');
                 if (savedData) {
@@ -317,7 +333,7 @@
                 }
             } catch (e) { console.error("Cache load error", e); }
 
-          }, []);
+          }, [fetchProducts]);
 
           const addItem = () => {
             setItems([...items, { id: Date.now(), name: '', qty: '', unit: '片', note: '' }]);
@@ -332,16 +348,13 @@
 
           const handleProductSelect = (id, product) => {
             const displayName = product.name; // 🌟 只顯示產品名稱
-            // const packingNote = product.packing ? `一箱${product.packing}片` : ''; // 不再自動產生
             
             setItems(items.map(item => {
               if (item.id === id) {
-                // const newNote = item.note ? `${item.note}, ${packingNote}` : packingNote; // 不再自動填入
                 return { 
                   ...item, 
                   name: displayName,
                   unit: product.unit || '片',
-                  // note: newNote // 保持原樣
                 };
               }
               return item;
@@ -600,7 +613,17 @@
 
                       {/* 2. 訂購內容列表 */}
                       <section className="animate-fade-in-up" style={{ animationDelay: '0.2s' }}>
-                        <SectionHeader icon={isReservation ? Icons.Archive : Icons.Bag} title={isReservation ? "保留品項清單" : "訂購內容清單"} />
+                        {/* 🌟 修改：新增更新資料按鈕 */}
+                        <SectionHeader 
+                            icon={isReservation ? Icons.Archive : Icons.Bag} 
+                            title={isReservation ? "保留品項清單" : "訂購內容清單"} 
+                            rightContent={
+                                <button type="button" onClick={() => fetchProducts(true)} className="flex items-center gap-1 text-xs font-bold text-blue-600 bg-blue-50 px-3 py-1.5 rounded-full hover:bg-blue-100 transition-colors">
+                                    <Icons.Refresh size={12} />
+                                    更新產品資料
+                                </button>
+                            }
+                        />
                         <div className="space-y-5">
                           {items.map((item, index) => (
                             <div key={item.id} className="bg-white p-6 md:p-8 rounded-[2rem] shadow-sm border border-gray-100 relative group transition-all hover:shadow-md">
