--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,8 @@
     <script type="text/babel">
         const { useState, useEffect, useRef, useCallback } = React;
 
-        // 🛑 您的 Google Script 網址
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxfOb6lYOtQnvnQ0GXSfnIMtHF2sDi6hcuthiKX0QP4I5RsI93BgcV9QS_p0Bw1icf1BQ/exec";
+        // 🛑 您的 Google Script 網址 (已更新為最新版本)
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyKP7YGKdSFYYJMEI2tH7t3u3lILjfc3XGK-xlFx0o3se2_QnnvP-vNtEGcgZXt1Xx7/exec";
 
         // --- 🛠️ 內建 SVG 圖示 ---
         const IconWrapper = ({ children, size = 20, className = "", ...props }) => (
