--- a/public/index.html
+++ b/public/index.html
@@ -325,6 +325,7 @@
           }, []);
 
           // 🌟 1. 載入時：讀取 localStorage 資料 & 產品資料
+          // 🟢 修改：只讀取客戶資料，不讀取出貨資料
           useEffect(() => {
             if (window.tailwind) setStyleLoaded(true);
             else setTimeout(() => setStyleLoaded(true), 500);
@@ -342,9 +343,10 @@
                         orderCompany: parsed.orderCompany || '',
                         orderContact: parsed.orderContact || '',
                         orderPhone: parsed.orderPhone || '',
-                        deliveryAddress: parsed.deliveryAddress || '',
-                        deliveryContact: parsed.deliveryContact || '',
-                        deliveryPhone: parsed.deliveryPhone || ''
+                        // 🟢 確保這些欄位不會被快取覆蓋
+                        // deliveryAddress: parsed.deliveryAddress || '', 
+                        // deliveryContact: parsed.deliveryContact || '', 
+                        // deliveryPhone: parsed.deliveryPhone || '' 
                     }));
                 }
             } catch (e) { console.error("Cache load error", e); }
@@ -387,14 +389,15 @@
             setLoading(true);
             
             // 🌟 2. 送出時：儲存資料到 localStorage
+            // 🟢 修改：只儲存客戶資料，不儲存出貨資料
             if (rememberMe) {
                 const dataToSave = {
                     orderCompany: formData.orderCompany,
                     orderContact: formData.orderContact,
                     orderPhone: formData.orderPhone,
-                    deliveryAddress: formData.deliveryAddress,
-                    deliveryContact: formData.deliveryContact,
-                    deliveryPhone: formData.deliveryPhone
+                    // deliveryAddress: formData.deliveryAddress, // ❌ 不存
+                    // deliveryContact: formData.deliveryContact, // ❌ 不存
+                    // deliveryPhone: formData.deliveryPhone // ❌ 不存
                 };
                 localStorage.setItem('tilePark_userData', JSON.stringify(dataToSave));
             }
@@ -717,7 +720,7 @@
 
                       {/* 3. 配送/保留資訊 */}
                       <section className="animate-fade-in-up" style={{ animationDelay: '0.3s' }}>
-                        <SectionHeader icon={Icons.Truck} title={isReservation ? "預計需求資訊" : "配送與現場資訊"} />
+                        <SectionHeader icon={Icons.Truck} title={isReservation ? "預計需求資訊" : "出貨與現場資訊"} />
                         <div className={`bg-white p-8 rounded-[2.5rem] shadow-sm border border-gray-100 space-y-8 ${isReservation ? 'ring-2 ring-blue-50' : ''}`}>
                           
                           {/* 日期欄位區塊 */}
@@ -745,11 +748,11 @@
 
                           <div className="space-y-2">
                             <label className="text-xs md:text-sm text-gray-400 font-black uppercase mb-1 block">
-                                  {isReservation ? "預計送貨地址 / 案件名稱 (可後補)" : "送貨地址"}
+                                  {isReservation ? "預計送貨地址 / 案件名稱 (可後補)" : "出貨地址"}
                             </label>
                             <input 
                                 required={!isReservation}
-                                placeholder={isReservation ? "如未確定可留空，或填寫案件名稱" : "請填寫完整配送地址"} 
+                                placeholder={isReservation ? "如未確定可留空，或填寫案件名稱" : "請填寫完整出貨地址"} 
                                 className="w-full bg-gray-50 border-none rounded-xl p-5 text-lg md:text-xl font-bold focus:ring-2 focus:ring-[#c25e00]/20 font-sans"
                                 value={formData.deliveryAddress} onChange={e => setFormData({...formData, deliveryAddress: e.target.value})} 
                             />
@@ -795,7 +798,7 @@
                                     <svg className="w-3.5 h-3.5 text-white hidden pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="3" d="M5 13l4 4L19 7"></path></svg>
                                 </div>
                                 <span className={`text-sm font-bold transition-colors ${rememberMe ? 'text-[#c25e00]' : 'text-gray-400 group-hover:text-gray-600'}`}>
-                                    記住我的資料 (公司、聯絡人、地址等)，下次自動帶入
+                                    記住訂購資料 (公司、姓名、電話)，下次自動帶入
                                 </span>
                             </label>
                        </div>
