--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,8 @@
           ChevronDown: (p) => <IconWrapper {...p}><path d="m6 9 6 6 6-6"/></IconWrapper>,
           Search: (p) => <IconWrapper {...p}><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></IconWrapper>,
           Save: (p) => <IconWrapper {...p}><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></IconWrapper>,
-          Refresh: (p) => <IconWrapper {...p}><path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"/><path d="M16 21h5v-5"/></IconWrapper>
+          Refresh: (p) => <IconWrapper {...p}><path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"/><path d="M16 21h5v-5"/></IconWrapper>,
+          Line: (p) => <IconWrapper {...p}><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></IconWrapper>
         };
 
         // --- Components ---
@@ -564,6 +565,10 @@
                          <p className="flex items-center justify-center gap-2 hover:text-[#c25e00] transition-colors font-bold text-gray-600">
                             <Icons.Phone size={14} className="shrink-0"/> 02-86860028
                          </p>
+                         {/* 🟢 新增：電腦版側邊欄 LINE 連結 */}
+                         <a href="https://line.me/R/ti/p/@tileparktw" target="_blank" rel="noreferrer" className="flex items-center justify-center gap-2 hover:text-[#06C755] transition-colors font-bold text-gray-600">
+                            <Icons.Line size={14} className="shrink-0"/> LINE: @tileparktw
+                         </a>
                       </div>
                       <div className="pt-8 text-[10px] text-gray-300 font-serif tracking-[0.4em] uppercase">Authentic Japanese Tiles</div>
                     </div>
@@ -824,6 +829,10 @@
                                 📠 02-81926543
                               </span>
                             </div>
+                            {/* 🟢 新增：手機版底部 LINE 連結 */}
+                            <a href="https://line.me/R/ti/p/@tileparktw" target="_blank" rel="noreferrer" className="flex items-center gap-2 hover:text-[#06C755] transition-colors font-bold text-gray-500">
+                                <Icons.Line size={12} /> LINE: @tileparktw
+                            </a>
                           </div>
                         </div>
                         <div className="text-[10px] text-gray-300 font-serif tracking-[1em] uppercase py-4">
